ParLI.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParLI.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pFunction -> Function                       (1)
	%start_pDecl -> Decl                               (2)
	%start_pListStm -> ListStm                         (3)
	%start_pListFunction -> ListFunction               (4)
	%start_pListDecl -> ListDecl                       (5)
	%start_pListExp -> ListExp                         (6)
	%start_pStm -> Stm                                 (7)
	%start_pExp1 -> Exp1                               (8)
	%start_pExp2 -> Exp2                               (9)
	%start_pExp3 -> Exp3                               (10)
	%start_pExp4 -> Exp4                               (11)
	%start_pExp5 -> Exp5                               (12)
	%start_pExp6 -> Exp6                               (13)
	%start_pExp7 -> Exp7                               (14)
	%start_pType -> Type                               (15)
	%start_pExp -> Exp                                 (16)
	Ident -> L_Ident                                   (17)
	Integer -> L_integ                                 (18)
	String -> L_quoted                                 (19)
	Program -> ListFunction                            (20)
	Function -> Type Ident '(' ListDecl ')' '{' ListStm '}'   (21)
	Decl -> Type Ident                                 (22)
	ListStm ->                                         (23)
	ListStm -> Stm ListStm                             (24)
	ListFunction ->                                    (25)
	ListFunction -> Function ListFunction              (26)
	ListDecl ->                                        (27)
	ListDecl -> Decl                                   (28)
	ListDecl -> Decl ',' ListDecl                      (29)
	ListExp ->                                         (30)
	ListExp -> Exp                                     (31)
	ListExp -> Exp ',' ListExp                         (32)
	Stm -> Decl ';'                                    (33)
	Stm -> Ident '=' Exp ';'                           (34)
	Stm -> '{' ListStm '}'                             (35)
	Stm -> 'while' '(' Exp ')' Stm                     (36)
	Stm -> 'return' Exp ';'                            (37)
	Stm -> 'if' '(' Exp ')' 'then' Stm 'else' Stm      (38)
	Exp1 -> Exp1 '||' Exp2                             (39)
	Exp1 -> Exp2                                       (40)
	Exp2 -> Exp2 '&&' Exp3                             (41)
	Exp2 -> Exp3                                       (42)
	Exp3 -> '!' Exp3                                   (43)
	Exp3 -> Exp4                                       (44)
	Exp4 -> Exp4 '++' Exp5                             (45)
	Exp4 -> Exp4 '+' Exp5                              (46)
	Exp4 -> Exp4 '-' Exp5                              (47)
	Exp4 -> Exp5                                       (48)
	Exp5 -> Exp5 '*' Exp6                              (49)
	Exp5 -> Exp5 '/' Exp6                              (50)
	Exp5 -> Exp6                                       (51)
	Exp6 -> Ident '(' ListExp ')'                      (52)
	Exp6 -> Exp7                                       (53)
	Exp7 -> Integer                                    (54)
	Exp7 -> Ident                                      (55)
	Exp7 -> String                                     (56)
	Exp7 -> 'true'                                     (57)
	Exp7 -> 'false'                                    (58)
	Exp7 -> '(' Exp ')'                                (59)
	Type -> 'bool'                                     (60)
	Type -> 'int'                                      (61)
	Type -> 'void'                                     (62)
	Type -> 'String'                                   (63)
	Type -> Function                                   (64)
	Exp -> Exp1                                        (65)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'/'            { PT _ (TS _ 10) }
	';'            { PT _ (TS _ 11) }
	'='            { PT _ (TS _ 12) }
	'String'       { PT _ (TS _ 13) }
	'bool'         { PT _ (TS _ 14) }
	'else'         { PT _ (TS _ 15) }
	'false'        { PT _ (TS _ 16) }
	'if'           { PT _ (TS _ 17) }
	'int'          { PT _ (TS _ 18) }
	'return'       { PT _ (TS _ 19) }
	'then'         { PT _ (TS _ 20) }
	'true'         { PT _ (TS _ 21) }
	'void'         { PT _ (TS _ 22) }
	'while'        { PT _ (TS _ 23) }
	'{'            { PT _ (TS _ 24) }
	'||'           { PT _ (TS _ 25) }
	'}'            { PT _ (TS _ 26) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pFunction rule  1
	%start_pDecl    rule  2
	%start_pListStm rule  3
	%start_pListFunction rule  4
	%start_pListDecl rule  5
	%start_pListExp rule  6
	%start_pStm     rule  7
	%start_pExp1    rule  8
	%start_pExp2    rule  9
	%start_pExp3    rule  10
	%start_pExp4    rule  11
	%start_pExp5    rule  12
	%start_pExp6    rule  13
	%start_pExp7    rule  14
	%start_pType    rule  15
	%start_pExp     rule  16
	Ident           rule  17
	Integer         rule  18
	String          rule  19
	Program         rule  20
	Function        rule  21
	Decl            rule  22
	ListStm         rules 23, 24
	ListFunction    rules 25, 26
	ListDecl        rules 27, 28, 29
	ListExp         rules 30, 31, 32
	Stm             rules 33, 34, 35, 36, 37, 38
	Exp1            rules 39, 40
	Exp2            rules 41, 42
	Exp3            rules 43, 44
	Exp4            rules 45, 46, 47, 48
	Exp5            rules 49, 50, 51
	Exp6            rules 52, 53
	Exp7            rules 54, 55, 56, 57, 58, 59
	Type            rules 60, 61, 62, 63, 64
	Exp             rule  65

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41
	%eof           reduce using rule 25

	Program        goto state 69
	Function       goto state 62
	ListFunction   goto state 70
	Type           goto state 64

State 1

	%start_pFunction -> . Function                      (rule 1)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41

	Function       goto state 68
	Type           goto state 64

State 2

	%start_pDecl -> . Decl                              (rule 2)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41

	Function       goto state 36
	Decl           goto state 67
	Type           goto state 53

State 3

	%start_pListStm -> . ListStm                        (rule 3)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'if'           shift, and enter state 54
	'int'          shift, and enter state 40
	'return'       shift, and enter state 55
	'void'         shift, and enter state 41
	'while'        shift, and enter state 56
	'{'            shift, and enter state 57
	L_Ident        shift, and enter state 18
	%eof           reduce using rule 23

	Ident          goto state 50
	Function       goto state 36
	Decl           goto state 51
	ListStm        goto state 65
	Stm            goto state 66
	Type           goto state 53

State 4

	%start_pListFunction -> . ListFunction              (rule 4)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41
	%eof           reduce using rule 25

	Function       goto state 62
	ListFunction   goto state 63
	Type           goto state 64

State 5

	%start_pListDecl -> . ListDecl                      (rule 5)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41
	%eof           reduce using rule 27

	Function       goto state 36
	Decl           goto state 60
	ListDecl       goto state 61
	Type           goto state 53

State 6

	%start_pListExp -> . ListExp                        (rule 6)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35
	%eof           reduce using rule 30

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	ListExp        goto state 58
	Exp1           goto state 22
	Exp2           goto state 23
	Exp3           goto state 24
	Exp4           goto state 25
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28
	Exp            goto state 59

State 7

	%start_pStm -> . Stm                                (rule 7)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'if'           shift, and enter state 54
	'int'          shift, and enter state 40
	'return'       shift, and enter state 55
	'void'         shift, and enter state 41
	'while'        shift, and enter state 56
	'{'            shift, and enter state 57
	L_Ident        shift, and enter state 18

	Ident          goto state 50
	Function       goto state 36
	Decl           goto state 51
	Stm            goto state 52
	Type           goto state 53

State 8

	%start_pExp1 -> . Exp1                              (rule 8)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp1           goto state 49
	Exp2           goto state 23
	Exp3           goto state 24
	Exp4           goto state 25
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28

State 9

	%start_pExp2 -> . Exp2                              (rule 9)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp2           goto state 48
	Exp3           goto state 24
	Exp4           goto state 25
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28

State 10

	%start_pExp3 -> . Exp3                              (rule 10)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp3           goto state 47
	Exp4           goto state 25
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28

State 11

	%start_pExp4 -> . Exp4                              (rule 11)

	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp4           goto state 46
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28

State 12

	%start_pExp5 -> . Exp5                              (rule 12)

	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp5           goto state 45
	Exp6           goto state 27
	Exp7           goto state 28

State 13

	%start_pExp6 -> . Exp6                              (rule 13)

	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp6           goto state 44
	Exp7           goto state 28

State 14

	%start_pExp7 -> . Exp7                              (rule 14)

	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 42
	Integer        goto state 20
	String         goto state 21
	Exp7           goto state 43

State 15

	%start_pType -> . Type                              (rule 15)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41

	Function       goto state 36
	Type           goto state 37

State 16

	%start_pExp -> . Exp                                (rule 16)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp1           goto state 22
	Exp2           goto state 23
	Exp3           goto state 24
	Exp4           goto state 25
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28
	Exp            goto state 29

State 17

	Ident -> . L_Ident                                  (rule 17)

	L_Ident        shift, and enter state 18


State 18

	Ident -> L_Ident .                                  (rule 17)

	'&&'           reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	'*'            reduce using rule 17
	'+'            reduce using rule 17
	'++'           reduce using rule 17
	','            reduce using rule 17
	'-'            reduce using rule 17
	'/'            reduce using rule 17
	';'            reduce using rule 17
	'='            reduce using rule 17
	'||'           reduce using rule 17
	%eof           reduce using rule 17


State 19

	Exp6 -> Ident . '(' ListExp ')'                     (rule 52)
	Exp7 -> Ident .                                     (rule 55)

	'&&'           reduce using rule 55
	'('            shift, and enter state 92
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	'++'           reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'||'           reduce using rule 55
	%eof           reduce using rule 55


State 20

	Exp7 -> Integer .                                   (rule 54)

	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	'++'           reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'||'           reduce using rule 54
	%eof           reduce using rule 54


State 21

	Exp7 -> String .                                    (rule 56)

	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	'++'           reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            reduce using rule 56
	';'            reduce using rule 56
	'||'           reduce using rule 56
	%eof           reduce using rule 56


State 22

	Exp1 -> Exp1 . '||' Exp2                            (rule 39)
	Exp -> Exp1 .                                       (rule 65)

	')'            reduce using rule 65
	','            reduce using rule 65
	';'            reduce using rule 65
	'||'           shift, and enter state 83
	%eof           reduce using rule 65


State 23

	Exp1 -> Exp2 .                                      (rule 40)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 41)

	'&&'           shift, and enter state 84
	')'            reduce using rule 40
	','            reduce using rule 40
	';'            reduce using rule 40
	'||'           reduce using rule 40
	%eof           reduce using rule 40


State 24

	Exp2 -> Exp3 .                                      (rule 42)

	'&&'           reduce using rule 42
	')'            reduce using rule 42
	','            reduce using rule 42
	';'            reduce using rule 42
	'||'           reduce using rule 42
	%eof           reduce using rule 42


State 25

	Exp3 -> Exp4 .                                      (rule 44)
	Exp4 -> Exp4 . '++' Exp5                            (rule 45)
	Exp4 -> Exp4 . '+' Exp5                             (rule 46)
	Exp4 -> Exp4 . '-' Exp5                             (rule 47)

	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'+'            shift, and enter state 85
	'++'           shift, and enter state 86
	','            reduce using rule 44
	'-'            shift, and enter state 87
	';'            reduce using rule 44
	'||'           reduce using rule 44
	%eof           reduce using rule 44


State 26

	Exp4 -> Exp5 .                                      (rule 48)
	Exp5 -> Exp5 . '*' Exp6                             (rule 49)
	Exp5 -> Exp5 . '/' Exp6                             (rule 50)

	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            shift, and enter state 88
	'+'            reduce using rule 48
	'++'           reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            shift, and enter state 89
	';'            reduce using rule 48
	'||'           reduce using rule 48
	%eof           reduce using rule 48


State 27

	Exp5 -> Exp6 .                                      (rule 51)

	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	'++'           reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'||'           reduce using rule 51
	%eof           reduce using rule 51


State 28

	Exp6 -> Exp7 .                                      (rule 53)

	'&&'           reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	'++'           reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'||'           reduce using rule 53
	%eof           reduce using rule 53


State 29

	%start_pExp -> Exp .                                (rule 16)

	%eof           accept


State 30

	Exp3 -> '!' . Exp3                                  (rule 43)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp3           goto state 91
	Exp4           goto state 25
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28

State 31

	Exp7 -> '(' . Exp ')'                               (rule 59)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp1           goto state 22
	Exp2           goto state 23
	Exp3           goto state 24
	Exp4           goto state 25
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28
	Exp            goto state 90

State 32

	Exp7 -> 'false' .                                   (rule 58)

	'&&'           reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	'++'           reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'/'            reduce using rule 58
	';'            reduce using rule 58
	'||'           reduce using rule 58
	%eof           reduce using rule 58


State 33

	Exp7 -> 'true' .                                    (rule 57)

	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	'++'           reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'||'           reduce using rule 57
	%eof           reduce using rule 57


State 34

	Integer -> L_integ .                                (rule 18)

	'&&'           reduce using rule 18
	')'            reduce using rule 18
	'*'            reduce using rule 18
	'+'            reduce using rule 18
	'++'           reduce using rule 18
	','            reduce using rule 18
	'-'            reduce using rule 18
	'/'            reduce using rule 18
	';'            reduce using rule 18
	'||'           reduce using rule 18
	%eof           reduce using rule 18


State 35

	String -> L_quoted .                                (rule 19)

	'&&'           reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	'++'           reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'/'            reduce using rule 19
	';'            reduce using rule 19
	'||'           reduce using rule 19
	%eof           reduce using rule 19


State 36

	Type -> Function .                                  (rule 64)

	L_Ident        reduce using rule 64
	%eof           reduce using rule 64


State 37

	%start_pType -> Type .                              (rule 15)
	Function -> Type . Ident '(' ListDecl ')' '{' ListStm '}'    (rule 21)

	L_Ident        shift, and enter state 18
	%eof           accept

	Ident          goto state 72

State 38

	Type -> 'String' .                                  (rule 63)

	L_Ident        reduce using rule 63
	%eof           reduce using rule 63


State 39

	Type -> 'bool' .                                    (rule 60)

	L_Ident        reduce using rule 60
	%eof           reduce using rule 60


State 40

	Type -> 'int' .                                     (rule 61)

	L_Ident        reduce using rule 61
	%eof           reduce using rule 61


State 41

	Type -> 'void' .                                    (rule 62)

	L_Ident        reduce using rule 62
	%eof           reduce using rule 62


State 42

	Exp7 -> Ident .                                     (rule 55)

	%eof           reduce using rule 55


State 43

	%start_pExp7 -> Exp7 .                              (rule 14)

	%eof           accept


State 44

	%start_pExp6 -> Exp6 .                              (rule 13)

	%eof           accept


State 45

	%start_pExp5 -> Exp5 .                              (rule 12)
	Exp5 -> Exp5 . '*' Exp6                             (rule 49)
	Exp5 -> Exp5 . '/' Exp6                             (rule 50)

	'*'            shift, and enter state 88
	'/'            shift, and enter state 89
	%eof           accept


State 46

	%start_pExp4 -> Exp4 .                              (rule 11)
	Exp4 -> Exp4 . '++' Exp5                            (rule 45)
	Exp4 -> Exp4 . '+' Exp5                             (rule 46)
	Exp4 -> Exp4 . '-' Exp5                             (rule 47)

	'+'            shift, and enter state 85
	'++'           shift, and enter state 86
	'-'            shift, and enter state 87
	%eof           accept


State 47

	%start_pExp3 -> Exp3 .                              (rule 10)

	%eof           accept


State 48

	%start_pExp2 -> Exp2 .                              (rule 9)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 41)

	'&&'           shift, and enter state 84
	%eof           accept


State 49

	%start_pExp1 -> Exp1 .                              (rule 8)
	Exp1 -> Exp1 . '||' Exp2                            (rule 39)

	'||'           shift, and enter state 83
	%eof           accept


State 50

	Stm -> Ident . '=' Exp ';'                          (rule 34)

	'='            shift, and enter state 82


State 51

	Stm -> Decl . ';'                                   (rule 33)

	';'            shift, and enter state 81


State 52

	%start_pStm -> Stm .                                (rule 7)

	%eof           accept


State 53

	Function -> Type . Ident '(' ListDecl ')' '{' ListStm '}'    (rule 21)
	Decl -> Type . Ident                                (rule 22)

	L_Ident        shift, and enter state 18

	Ident          goto state 80

State 54

	Stm -> 'if' . '(' Exp ')' 'then' Stm 'else' Stm     (rule 38)

	'('            shift, and enter state 79


State 55

	Stm -> 'return' . Exp ';'                           (rule 37)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 33
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Exp1           goto state 22
	Exp2           goto state 23
	Exp3           goto state 24
	Exp4           goto state 25
	Exp5           goto state 26
	Exp6           goto state 27
	Exp7           goto state 28
	Exp            goto state 78

State 56

	Stm -> 'while' . '(' Exp ')' Stm                    (rule 36)

	'('            shift, and enter state 77


State 57

	Stm -> '{' . ListStm '}'                            (rule 35)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'if'           shift, and enter state 54
	'int'          shift, and enter state 40
	'return'       shift, and enter state 55
	'void'         shift, and enter state 41
	'while'        shift, and enter state 56
	'{'            shift, and enter state 57
	'}'            reduce using rule 23
	L_Ident        shift, and enter state 18

	Ident          goto state 50
	Function       goto state 36
	Decl           goto state 51
	ListStm        goto state 76
	Stm            goto state 66
	Type           goto state 53

State 58

	%start_pListExp -> ListExp .                        (rule 6)

	%eof           accept


State 59

	ListExp -> Exp .                                    (rule 31)
	ListExp -> Exp . ',' ListExp                        (rule 32)

	')'            reduce using rule 31
	','            shift, and enter state 75
	%eof           reduce using rule 31


State 60

	ListDecl -> Decl .                                  (rule 28)
	ListDecl -> Decl . ',' ListDecl                     (rule 29)

	')'            reduce using rule 28
	','            shift, and enter state 74
	%eof           reduce using rule 28


State 61

	%start_pListDecl -> ListDecl .                      (rule 5)

	%eof           accept


State 62

	ListFunction -> Function . ListFunction             (rule 26)
	Type -> Function .                                  (rule 64)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41
	L_Ident        reduce using rule 64
	%eof           reduce using rule 25

	Function       goto state 62
	ListFunction   goto state 73
	Type           goto state 64

State 63

	%start_pListFunction -> ListFunction .              (rule 4)

	%eof           accept


State 64

	Function -> Type . Ident '(' ListDecl ')' '{' ListStm '}'    (rule 21)

	L_Ident        shift, and enter state 18

	Ident          goto state 72

State 65

	%start_pListStm -> ListStm .                        (rule 3)

	%eof           accept


State 66

	ListStm -> Stm . ListStm                            (rule 24)

	'String'       shift, and enter state 38
	'bool'         shift, and enter state 39
	'if'           shift, and enter state 54
	'int'          shift, and enter state 40
	'return'       shift, and enter state 55
	'void'         shift, and enter state 41
	'while'        shift, and enter state 56
	'{'            shift, and enter state 57
	'}'            reduce using rule 23
	L_Ident        shift, and enter state 18
	%eof           reduce using rule 23

	Ident          goto state 50
	Function       goto state 36
	Decl           goto state 51
	ListStm        goto state 71
	Stm            goto state 66
	Type           goto state 53

State 67

	%start_pDecl -> Decl .                              (rule 2)

	%eof           accept


State 68

	%start_pFunction -> Function .                      (rule 1)
	Type -> Function .                                  (rule 64)

	L_Ident        reduce using rule 64
	%eof           accept


State 69
